add_subdirectory(commands_aggregation)
add_subdirectory(median_filter)
add_subdirectory(subgroups_imagecopy_tutorial)
add_subdirectory(subgroups_visualization_tutorial)
add_subdirectory(vme_search)
add_subdirectory(vme_hme)
add_subdirectory(vme_intra)
add_subdirectory(vme_wpp)
add_subdirectory(vme_interlaced)
add_subdirectory(vme_interop)
