if(WITH_OCL)
    add_subdirectory(commands_aggregation)
    add_subdirectory(median_filter)
    add_subdirectory(subgroups_imagecopy_tutorial)
    add_subdirectory(subgroups_visualization_tutorial)
    add_subdirectory(vme_search)
    add_subdirectory(vme_hme)
    add_subdirectory(vme_intra)
    add_subdirectory(vme_wpp)
    add_subdirectory(vme_interlaced)
    add_subdirectory(vme_interop)
    add_subdirectory(template)
    add_subdirectory(usm_hello_world)
    add_subdirectory(usm_linked_list)
    add_subdirectory(usm_mem_info)
    add_subdirectory(usm_queries)
endif()
if(WITH_L0)
    add_subdirectory(ze_info)
endif()
