#
# Copyright (C) 2019 Intel Corporation
#
# SPDX-License-Identifier: MIT
#

add_subdirectory(align_utils)
add_subdirectory(application)
add_subdirectory(boost_intel)
add_subdirectory(image)
add_subdirectory(timer)
add_subdirectory(version)
add_subdirectory(yuv_utils)
add_subdirectory(ocl_utils)
add_subdirectory(ocl_entrypoints)
add_subdirectory(logging)
add_subdirectory(random)
add_subdirectory(utils)
add_subdirectory(core_template)
add_subdirectory(test_harness)
